# linux_c_freshman

./: LinuxSystemApi  README.md  a.out  calculate  calculate.c  commit_template.txt  main  template.c  template.cpp  use_define.c
Macro_defination/: a.out  macr_if.c  macr_va_args.c
bufferModeTest/: fullBuffer.c  lineBuffer.c  log.txt  nobuffer.c
c_pitfalls/: a.out  addtionincrease_pack1.c  addtionincrease_packdefault.c  addtionincrease_packdefaultwithcolon.c  auto_increate.c  left_move.c  local_vars.c  memalignpack.c  octal_number.c  unsignedint.c
cmake_test/: CMakeLists.txt
cmake_test/include/: main.h
cmake_test/src/: main.c
cmake_tutorial/Step1/: CMakeLists.txt  tutorial.cxx
cpp_c_invoke/: moduleA.c  moduleA.h  moduleB.c  moduleB.cpp  moduleB.h
dynamic_lib/: main.c  test.c
dynamic_or_static_lib/: 2.c  3.c  a.out
dynamic_or_static_lib/dynamic_lib/: AB.c  main
dynamic_or_static_lib/static_lib/: main  main.c
dynamic_or_static_lib/warmup/: 1.c
enum/: a.out  enum_test.c
execfamily/: Makefile  a.out  execve  execve.c  execvecmd  new
execfunctions/: Makefile  a  execfamily_descriptions.txt  exectest.c  execve  myecho  myecho.c
faq/: bitext.c
file_chmod_attribute/: fchown.c
file_management/: func_umount  func_unlink  func_ustat
file_management/func_access/: access  access.c  test
fork/: a.out  forktest.c
function_c_c++_macro_definition/: a.out  definepoint.c  maintest.c
function_fchmod/: a.out  fchmodtest.c
function_getopt/: getopt_descriptions.txt
function_inctl/: ioctl  ioctl.c
function_my_clear/: a.out
function_pointer/: function_point.cpp
function_poll/: a.out  getevent.c  in2  poll.c
function_sizeof/: main.c
function_snprintf/: main.c
function_socket/: client.c  links.txt  server.c  sockets.txt
function_strrchr/: a.out  strrchrtest.c
function_typeof/: main.c
gcc_complier/: a.out  crash  crash.c  hello  hello.c  hello.i  hello.s  hellow  hellow.c  hellow.i  hellow.s
key_related/: key_receive.c
keyword/: main.cpp  main.h
linuxsourcecode/: coreutils_8.25-2ubuntu2.debian.tar.xz  coreutils_8.25-2ubuntu2.dsc
makeTest/: Makefile
mem_manager/: a.out  a1.out  core  four_functions.c  linkedlist.c  memshareread.c  memsharewrite.c
my_function_c_c++_macro_define/: maintest.c
process_management/: a.out  fork_subprocess.c  proessgroup.c  vfork
secrect_of_keywords/: .program_model  cf  mytype.c
tool_add2line/: '  a.out  test.c  usage.txt
waitfunctions/: a.out  getpgid.c  i2fl.sh  manualsource.c  signal.c  signal1.txt  test.c  text.txt
(+84 files in other folders)
